@@ -1468,12 +1468,18 @@ void CreateMainMenu() {
 	ADDSUBMENU(0, _("&File"));
 	ADDMENUITEM(0, _("E&xit"), ID_FILE_EXIT);
 	ADDSEPARATOR(0);
-	ADDSUBMENUS(0, 1, _("&States"));
-	ADDSEPARATOR(0);
 	ADDMENUITEM(0, _("Run &EXE..."), ID_FILE_RUN_EXE);
 	ADDMENUITEM(0, _("Run &BIOS"), ID_FILE_RUNBIOS);
 	ADDMENUITEM(0, _("Run &ISO..."), ID_FILE_RUN_ISO);
 	ADDMENUITEM(0, _("Run &CD"), ID_FILE_RUN_CD);
+
+	ADDSUBMENU(0, _("&Emulator"));
+	ADDSUBMENUS(0, 1, _("&States"));
+	ADDSEPARATOR(0);
+	ADDMENUITEM(0, _("S&witch ISO..."), ID_EMULATOR_SWITCH_ISO);
+	ADDSEPARATOR(0);
+	ADDMENUITEM(0, _("Re&set"), ID_EMULATOR_RESET);
+	ADDMENUITEM(0, _("&Run"), ID_EMULATOR_RUN);
 	ADDSUBMENUS(1, 3, _("&Save"));
 	ADDSUBMENUS(1, 2, _("&Load"));
 	ADDMENUITEM(2, _("&Other..."), ID_FILE_STATES_LOAD_OTHER);
@@ -1488,12 +1494,6 @@ void CreateMainMenu() {
 	ADDMENUITEM(3, _("Slot &3"), ID_FILE_STATES_SAVE_SLOT3);
 	ADDMENUITEM(3, _("Slot &2"), ID_FILE_STATES_SAVE_SLOT2);
 	ADDMENUITEM(3, _("Slot &1"), ID_FILE_STATES_SAVE_SLOT1);
-
-	ADDSUBMENU(0, _("&Emulator"));
-	ADDMENUITEM(0, _("S&witch ISO..."), ID_EMULATOR_SWITCH_ISO);
-	ADDSEPARATOR(0);
-	ADDMENUITEM(0, _("Re&set"), ID_EMULATOR_RESET);
-	ADDMENUITEM(0, _("&Run"), ID_EMULATOR_RUN);
 
 	ADDSUBMENU(0, _("&Configuration"));
 	ADDMENUITEM(0, _("Cheat &Search..."), ID_CONFIGURATION_CHEATSEARCH);
